Update Header component with navigation fixes

--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WealthWise - Your Guide to Financial Freedom</title>
+    <title>The Rupee Routine - Your Guide to Financial Freedom</title>
     <meta name="description" content="Expert personal finance advice, budgeting tips, investment strategies, and money management guidance to help you achieve financial freedom." />
-    <meta name="author" content="WealthWise" />
+    <meta name="author" content="TheRupeeRoutine" />
 
-    <meta property="og:title" content="WealthWise - Your Guide to Financial Freedom" />
+    <meta property="og:title" content="TheRupeeRoutine - Your Guide to Financial Freedom" />
     <meta property="og:description" content="Expert personal finance advice, budgeting tips, investment strategies, and money management guidance." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@WealthWise" />
+    <meta name="twitter:site" content="@TheRupeeRoutine" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
